--- a/UserManagementSystem/Client/wwwroot/index.html
+++ b/UserManagementSystem/Client/wwwroot/index.html
@@ -7,6 +7,7 @@
     <title>UserManagementSystem</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="css/app.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="UserManagementSystem.Client.styles.css" rel="stylesheet" />
